--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -46,7 +46,13 @@
       <section>
         <ion-button (click)="goToSteps()" color="danger">Stappen</ion-button>
         <ion-button (click)="goToReview()"color="danger">Beoordeel recept</ion-button>
-        <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
+        <div *ngIf="!favCheck">
+          <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
+        </div>
+        <div *ngIf="!favCheck">
+          <ion-button  (click)="deleteFavorite()" >Verwijder als favorite</ion-button>
+        </div>
+        
       </section>
 
 
